fixed respo in cards when screen are landscape on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -339,7 +339,7 @@ footer {
 		flex-wrap: wrap;
 	}
 	.card {
-		height: 30vh;
+		min-height: 30vh;
 		width: 75%;
 		margin: 1em 1em;
 	}
